第一章笔记提交

--- a/笔记/第一章.md
+++ b/笔记/第一章.md
@@ -1,6 +1,6 @@
-#开始
+# 开始
 
-##函数
+## 函数
 
 每个C++程序都包含一个或多个程序，其中有且只有一个函数必须命名为**main**，作为程序的入口，系统通过调用main函数来运行C++程序。
 
@@ -10,6 +10,56 @@
 3. 形参列表
 4. 函数体（函数体以左花括号开始，右花括号结尾）
 
+## return
+
 **return**结束函数的执行
 当**return**返回值时返回值的类型必须与函数的返回类型相容。
 **return**后要接分号
+
+**main**函数的返回值一般被用来标记状态
+0表示成功，非0的含义由系统定义，一般用来指出错误类型。
+
+## C++后缀名
+
+C++源文件的常见后缀名包括.cc,.cpp,.cxx,.cp等。
+
+### 可执行文件后缀名
+
+windows系统的后缀为.exe，unix的后缀为.out
+
+##IO
+
+C++通过标准库std提供IO机制。iostream库包括istream和ostream，标准库定义了四个IO对象。
+1. std::cin 标准输入
+2. std::cout 标准输出
+3. std::cerr 输出警告和错误信息
+4. std::clog 输出一般性消息 
+
+**<<**输出运算符，向流写出数据，其左侧对象必须是ostream的对象，返回值为其左侧运算对象。
+**>>**输入运算符，从流读入数据，其左侧对象必须是istream的对象，返回值为其左侧运算对象。
+**endl**效果结束当前行。并将缓冲区的值刷新到设备中。
+
+##头文件与命名空间
+
+用#include加载头文件，一般来说#include指令都放在源文件开始的地方。
+标准库头文件用<>，非标准库头文件同""。
+标准库定义的所有名字都放在命名空间std中。
+
+##注释
+
+- // 单行注释
+- /*  */   多行注释
+多行注释的嵌套非常容易出错，所以尽量使用单行注释
+
+##自增自减运算符
+
+++n 前缀递增运算符，不生成一个临时变量
+n++ 后缀递增运算符
+
+##循环
+
+while和for都是先判断是否符合条件再开始循环，循环次数为0-n次。
+do-while是第一次循环后判断，循环次数为1-n次。
+
+**调用运算符()**
+
