--- a/随笔/链接库随笔.md
+++ b/随笔/链接库随笔.md
@@ -8,12 +8,10 @@
 
 
 ## 链接库介绍与分类
-       计算机中有些文件专门用于存储可重复使用的代码，例如函数或者类，通常将其称为库文件，也可以简称为库。所谓**链接库**就是
-将开源的库文件进行编译，打包后得到的二进制文件。链接库无法独立运行，必须让其他的程序加载才可以导入到内存中。
+       计算机中有些文件专门用于存储可重复使用的代码，例如函数或者类，通常将其称为库文件，也可以简称为库。所谓**链接库**就是将开源的库文件进行编译，打包后得到的二进制文件。链接库无法独立运行，必须让其他的程序加载才可以导入到内存中。
 
-    ###   编译
-       由编译器逐个对源文件进行语法，语义分析，最终生成目标文件，目标文件都是二进制文件，无法单独执行。他们会相互调用对方的
-函数或变量。也可能会调用某些链接库文件中的函数或变量。编译器无法跨文件的找到文件确切的存储地址。
+   ###   编译
+       由编译器逐个对源文件进行语法，语义分析，最终生成目标文件，目标文件都是二进制文件，无法单独执行。他们会相互调用对方的函数或变量。也可能会调用某些链接库文件中的函数或变量。编译器无法跨文件的找到文件确切的存储地址。
 
    ###    链接
        对于各个目标文件中缺失的函数和变量的存储地址，由链接器负责处理，最终生成可执行文件（将所有的目标文件和链接库组织起来）。
@@ -25,8 +23,7 @@
           静态链接是指在编译过程中，无论缺失的地址位于其他目标文件或者链接库中，链接库都会逐个找到生成可执行文件，可以独立运行。
 
    ####  动态链接
-          动态链接是指在编译过程中在所有目标文件中找到缺失的地址，生成可执行文件，仍缺失的部分，在文件执行时，由链接库和可执行
-文件一同载入内存，再有链接器完成后续地址修复工作。
+          动态链接是指在编译过程中在所有目标文件中找到缺失的地址，生成可执行文件，仍缺失的部分，在文件执行时，由链接库和可执行文件一同载入内存，再有链接器完成后续地址修复工作。
 
    ####  静态链接库和动态链接库的优缺点
            使用静态链接库完成链接，会有以下缺点：
@@ -53,9 +50,7 @@
              在静态库和动态库链接时生成的lib文件内容并不相同。
               + 静态库：静态库生成的lib文件包含函数代码本身的定义以及实现。在编译时全部加入到程序中。
               + 动态库：动态库生成的lib文件只包含函数的索引以及dll文件的信息，具体函数实现由运行时dll文件加载入程序中。
-              + 总结：lib文件在编译中使用，dll文件在运行中使用。如果只需要编译就只要lib文件就可以了，如果只是想让使用动态链接且已经编译完成
-的程序运行起来使用dll文件就可以了。 
-        
+              + 总结：lib文件在编译中使用，dll文件在运行中使用。如果只需要编译就只要lib文件就可以了，如果只是想让使用动态链接且已经编译完成的程序运行起来使用dll文件就可以了。  
 
  ## 链接库的生成
               本文已VS22为例，演示如何生成静态库和动态库。
