--- a/随笔/链接库随笔.md
+++ b/随笔/链接库随笔.md
@@ -69,36 +69,43 @@
 ### 静态库lib文件的生成
 
   1.  创建一个新项目
-				![创建项目](//链接库随笔截图/创建新项目.png)
+	
+   ![创建项目](..//链接库随笔截图/创建新项目.png)
 
    2.  分别添加一个头文件和一个源文件到项目中
-              ![添加头文件和源文件](//链接库随笔截图/h和cpp.png)
+   
+   ![添加头文件和源文件](..//链接库随笔截图/h和cpp.jpg)
 
    3.  右击项目，单击属性页面，在配置属性中找到常规选项卡，将配置类型改为**静态库(.lib)**
-              ![配置类型修改](//链接库随笔截图/静态库.png)
+   
+   ![配置类型修改](..//链接库随笔截图/静态库.png)
 
   4.  如果在编译时出现未定义的变量等问题，可尝试更改字符集为多字节字符集
-              ![多字节字符集](//链接库随笔截图/多字符集.png)
+   
+   ![多字节字符集](链接库随笔截图/多字符集.png)
 
   5.  开始正式编译，编译成功后会生成lib文件
-              ![lib文件](//链接库截图随笔/生成完lib文件.png)
+   
+   ![lib文件](链接库截图随笔/生成完lib文件.png)
     
-  ### 动态库lib文件和dll文件的生成
-              
-              ![]()
+  ### 动态库lib文件和dll文件的生成      
+   ![]()
   
   ## 链接库的使用
                 
  ### 静态链接库的使用
 
    1.   打开想要引用链接库的项目
-                        ![lib文件](//链接库截图随笔/打开主项目.png)
+   
+   ![lib文件](链接库截图随笔/打开主项目.png)
       
    2.   打开项目的属性页面链接器常规选项卡，修改附加库目录为lib文件所在文件夹的目录
-                      ![lib文件](//链接库截图随笔/附加库目录修改.png)
+   
+   ![lib文件](//链接库截图随笔/附加库目录修改.png)
            
   3.   为了防止编译器识别不了lib文件，将lib文件名输入到下图所在位置
-                     ![lib文件](//链接库截图随笔/使用lib命令行.png)
+   
+   ![lib文件](//链接库截图随笔/使用lib命令行.png)
 
               
             
