--- a/随笔/链接库随笔.md
+++ b/随笔/链接库随笔.md
@@ -74,7 +74,7 @@
 
    2.  分别添加一个头文件和一个源文件到项目中
    
-   ![添加头文件和源文件](..//链接库随笔截图/h和cpp.jpg)
+   ![添加头文件和源文件](链接库随笔截图/h和cpp.png)
 
    3.  右击项目，单击属性页面，在配置属性中找到常规选项卡，将配置类型改为**静态库(.lib)**
    
