--- a/随笔/链接库随笔.md
+++ b/随笔/链接库随笔.md
@@ -74,7 +74,7 @@
 
    2.  分别添加一个头文件和一个源文件到项目中
    
-   ![添加头文件和源文件](链接库随笔截图/h和cpp.png)
+   ![添加头文件和源文件](https://github.com/tian2287641303/C-prmer-/blob/8c6b62caf76c564753f6fa7709b2fcb83e97edbb/%E9%9A%8F%E7%AC%94/%E9%93%BE%E6%8E%A5%E5%BA%93%E9%9A%8F%E7%AC%94%E6%88%AA%E5%9B%BE/h%E5%92%8Ccpp.png)
 
    3.  右击项目，单击属性页面，在配置属性中找到常规选项卡，将配置类型改为**静态库(.lib)**
    
