--- a/随笔/链接库随笔.md
+++ b/随笔/链接库随笔.md
@@ -20,10 +20,12 @@
           链接库由两种，一种为静态链接 ，一种为动态链接
     
    ####  静态链接
-          静态链接是指在编译过程中，无论缺失的地址位于其他目标文件或者链接库中，链接库都会逐个找到生成可执行文件，可以独立运行。
+          静态链接是指在编译过程中，无论缺失的地址位于其他目标文件或者链接库中，链接库都会逐个找到生成可执行文件，  
+可以独立运行。
 
    ####  动态链接
-          动态链接是指在编译过程中在所有目标文件中找到缺失的地址，生成可执行文件，仍缺失的部分，在文件执行时，由链接库和可执行文件一同载入内存，再有链接器完成后续地址修复工作。
+          动态链接是指在编译过程中在所有目标文件中找到缺失的地址，生成可执行文件，仍缺失的部分，在文件执行时，  
+由链接库和可执行文件一同载入内存，再有链接器完成后续地址修复工作。
 
    ####  静态链接库和动态链接库的优缺点
           
@@ -60,7 +62,8 @@
 
  + 静态库：静态库生成的lib文件包含函数代码本身的定义以及实现。在编译时全部加入到程序中。
  + 动态库：动态库生成的lib文件只包含函数的索引以及dll文件的信息，具体函数实现由运行时dll文件加载入程序中。
- + 总结：lib文件在编译中使用，dll文件在运行中使用。如果只需要编译就只要lib文件就可以了，如果只是想让使用动态链接且已经编译完成的程序运行起来使用dll文件就可以了。  
+ + 总结：lib文件在编译中使用，dll文件在运行中使用。如果只需要编译就只要lib文件就可以了，  
+如果只是想让使用动态链接且已经编译完成的程序运行起来使用dll文件就可以了。  
 
  ## 链接库的生成
       
@@ -74,7 +77,7 @@
 
    2.  分别添加一个头文件和一个源文件到项目中
    
-   ![添加头文件和源文件](https://github.com/tian2287641303/C-prmer-/blob/8c6b62caf76c564753f6fa7709b2fcb83e97edbb/%E9%9A%8F%E7%AC%94/%E9%93%BE%E6%8E%A5%E5%BA%93%E9%9A%8F%E7%AC%94%E6%88%AA%E5%9B%BE/h%E5%92%8Ccpp.png)
+   ![添加头文件和源文件](..//链接库随笔截图/h和cpp.png)
 
    3.  右击项目，单击属性页面，在配置属性中找到常规选项卡，将配置类型改为**静态库(.lib)**
    
