--- a/随笔/链接库随笔.md
+++ b/随笔/链接库随笔.md
@@ -8,7 +8,7 @@
 
 
 ## 链接库介绍与分类
-       计算机中有些文件专门用于存储可重复使用的代码，例如函数或者类，通常将其称为库文件，也可以简称为库。所谓**链接库**就是将开源的库文件进行编译，打包后得到的二进制文件。链接库无法独立运行，必须让其他的程序加载才可以导入到内存中。
+       计算机中有些文件专门用于存储可重复使用的代码,例如函数或者类，通常将其称为库文件，也可以简称为库。所谓**链接库**就是将开源的库文件进行编译，打包后得到的二进制文件。链接库无法独立运行，必须让其他的程序加载才可以导入到内存中。
 
    ###   编译
        由编译器逐个对源文件进行语法，语义分析，最终生成目标文件，目标文件都是二进制文件，无法单独执行。他们会相互调用对方的函数或变量。也可能会调用某些链接库文件中的函数或变量。编译器无法跨文件的找到文件确切的存储地址。
@@ -20,12 +20,10 @@
           链接库由两种，一种为静态链接 ，一种为动态链接
     
    ####  静态链接
-          静态链接是指在编译过程中，无论缺失的地址位于其他目标文件或者链接库中，链接库都会逐个找到生成可执行文件，  
-可以独立运行。
+          静态链接是指在编译过程中，无论缺失的地址位于其他目标文件或者链接库中，链接库都会逐个找到生成可执行文件，可以独立运行。
 
    ####  动态链接
-          动态链接是指在编译过程中在所有目标文件中找到缺失的地址，生成可执行文件，仍缺失的部分，在文件执行时，  
-由链接库和可执行文件一同载入内存，再有链接器完成后续地址修复工作。
+          动态链接是指在编译过程中在所有目标文件中找到缺失的地址，生成可执行文件，仍缺失的部分，在文件执行时，由链接库和可执行文件一同载入内存，再有链接器完成后续地址修复工作。
 
    ####  静态链接库和动态链接库的优缺点
           
@@ -62,8 +60,7 @@
 
  + 静态库：静态库生成的lib文件包含函数代码本身的定义以及实现。在编译时全部加入到程序中。
  + 动态库：动态库生成的lib文件只包含函数的索引以及dll文件的信息，具体函数实现由运行时dll文件加载入程序中。
- + 总结：lib文件在编译中使用，dll文件在运行中使用。如果只需要编译就只要lib文件就可以了，  
-如果只是想让使用动态链接且已经编译完成的程序运行起来使用dll文件就可以了。  
+ + 总结：lib文件在编译中使用，dll文件在运行中使用。如果只需要编译就只要lib文件就可以了，如果只是想让使用动态链接且已经编译完成的程序运行起来使用dll文件就可以了。  
 
  ## 链接库的生成
       
@@ -77,19 +74,19 @@
 
    2.  分别添加一个头文件和一个源文件到项目中
    
-   ![添加头文件和源文件](..//链接库随笔截图/h和cpp.png)
+   ![添加头文件和源文件](..//链接库随笔截图/h和cpp.jpg)
 
    3.  右击项目，单击属性页面，在配置属性中找到常规选项卡，将配置类型改为**静态库(.lib)**
    
-   ![配置类型修改](..//链接库随笔截图/静态库.png)
+   ![配置类型修改](..//链接库随笔截图/静态库.jpg)
 
   4.  如果在编译时出现未定义的变量等问题，可尝试更改字符集为多字节字符集
    
-   ![多字节字符集](链接库随笔截图/多字符集.png)
+   ![多字节字符集](..//链接库随笔截图/多字符集.jpg)
 
   5.  开始正式编译，编译成功后会生成lib文件
    
-   ![lib文件](链接库截图随笔/生成完lib文件.png)
+   ![lib文件](..//链接库截图随笔/生成完lib文件.jpg)
     
   ### 动态库lib文件和dll文件的生成      
    ![]()
@@ -100,15 +97,15 @@
 
    1.   打开想要引用链接库的项目
    
-   ![lib文件](链接库截图随笔/打开主项目.png)
+   ![lib文件](..//链接库截图随笔/打开主项目.jpg)
       
    2.   打开项目的属性页面链接器常规选项卡，修改附加库目录为lib文件所在文件夹的目录
    
-   ![lib文件](//链接库截图随笔/附加库目录修改.png)
+   ![lib文件](..//链接库截图随笔/附加库目录修改.png)
            
   3.   为了防止编译器识别不了lib文件，将lib文件名输入到下图所在位置
    
-   ![lib文件](//链接库截图随笔/使用lib命令行.png)
+   ![lib文件](..//链接库截图随笔/使用lib命令行.png)
 
               
             
