--- a/随笔/链接库随笔.md
+++ b/随笔/链接库随笔.md
@@ -8,7 +8,7 @@
 
 
 ## 链接库介绍与分类
-       计算机中有些文件专门用于存储可重复使用的代码,例如函数或者类，通常将其称为库文件，也可以简称为库。所谓**链接库**就是将开源的库文件进行编译，打包后得到的二进制文件。链接库无法独立运行，必须让其他的程序加载才可以导入到内存中。
+       计算机中有些文件专门用于存储可重复使用的代码,例如函数或者类，通常将其称  为库文件，也可以简称为库。所谓**链接库**就是将开源的库文件进行编译，打包后得到的二进制文件。链接库无法独立运行，必须让其他的程序加载才可以导入到内存中。
 
    ###   编译
        由编译器逐个对源文件进行语法，语义分析，最终生成目标文件，目标文件都是二进制文件，无法单独执行。他们会相互调用对方的函数或变量。也可能会调用某些链接库文件中的函数或变量。编译器无法跨文件的找到文件确切的存储地址。
@@ -88,8 +88,16 @@
    
    ![lib文件](..//随笔/链接库随笔截图//生成完lib文件.jpg)
     
-  ### 动态库lib文件和dll文件的生成      
-   ![]()
+  ### 动态库lib文件和dll文件的生成
+  **前两步与静态库文件生成相同**
+  第三步是将配置类型改成动态库(.dll).第四步相同。但需要**注意**的是不能直接就这么开始编译项目了，否则会只生成dll文件，不生成lib文件。有两种方法可以成功把lib和dll文件都生成。
+  1. 在项目中添加def文件，需要**注意**的是，不是直接添加就完事了，直接添加后的def文件为空文件，需要用户手动将所需要的函数
+  
+ ![新建def文件](..//随笔/链接库随笔截图//def文件.png)
+   
+  2. 在所需要使用的函数前添加extern "C" __declspec(dllexport)
+
+![添加](..//随笔/链接库随笔截图//添加.png)
   
   ## 链接库的使用
                 
@@ -107,6 +115,9 @@
    
    ![lib文件](..//随笔/链接库随笔截图//使用lib命令行.jpg)
 
+### 动态链接库的使用
+**动态链接库**的使用和使用静态链接库相比并没有太多差距，需要**注意**的是使用动态链接库最好是把dll文件和lib文件一起放到项目所在的文件夹中去，而不是只是在项目属性中更改附加库目录，否则打不开dll文件。
+![放入项目中](..//随笔/链接库随笔截图//放到项目所在文件夹中.png)
               
             
      
