--- a/随笔/链接库随笔.md
+++ b/随笔/链接库随笔.md
@@ -91,7 +91,7 @@
   ### 动态库lib文件和dll文件的生成
   **前两步与静态库文件生成相同**
   第三步是将配置类型改成动态库(.dll).第四步相同。但需要**注意**的是不能直接就这么开始编译项目了，否则会只生成dll文件，不生成lib文件。有两种方法可以成功把lib和dll文件都生成。
-  1. 在项目中添加def文件，需要**注意**的是，不是直接添加就完事了，直接添加后的def文件为空文件，需要用户手动将所需要的函数
+  1. 在项目中添加def文件，需要**注意**的是，不是直接添加就完事了，直接添加后的def文件为空文件，需要用户手动将所需要的函数（但经过测试发现def文件为空生成的dll文件和lib文件同样可以使用）
   
  ![新建def文件](..//随笔/链接库随笔截图//def文件.png)
    
@@ -122,5 +122,9 @@
             
      
 
+**note:**
+关于github上传图片打不开的问题，解决方法如下：
 
-     
++ 图片打不开是因为github的图片使用的域名为camo.githubusercontent.com，但国内dns运营商未将域名放到DNS映射列表中。所以需要我们手动的将域名对应的ip地址放到 本机的hosts文件中。（注意hosts文件的修改需要先修改自身权限）
+**note：**
+后续应学习declspec关键字的具体用法。
