--- a/随笔/链接库随笔.md
+++ b/随笔/链接库随笔.md
@@ -95,7 +95,14 @@
   
  ![新建def文件](..//随笔/链接库随笔截图//def文件.png)
    
-  2. 在所需要使用的函数前添加extern "C" __declspec(dllexport)
+  2. 在所需要使用的函数前添加extern "C" __declspec(dllexport)。declspec是Microsoft c++关键字，配合属性对标准c++进行扩充。
+目前知道用法的属性：
++  dllexport：说明函数要从本dll导出。
++  dllimport：说明函数是从别的dll导入。
++  noreturn :  不需要返回值。
++  nothrow:   不存在异常抛出。
++  noinline： 不需要内联。
+
 
 ![添加](..//随笔/链接库随笔截图//添加.png)
   
