--- a/随笔/内存对齐.md
+++ b/随笔/内存对齐.md
@@ -4,17 +4,32 @@
 ## C++存储空间分类 
 
 
-+ **堆内存** 自由空间，用来存储用户动态分配的对象。
-+ **栈内存** 用来保存定义在函数内的非静态(static)对象。
-+ **静态内存** 用来保存局部static对象以及定义在任何函数之外的变量。
-+ **
++ **堆内存** 自由空间，用来存储用户动态分配的对象，向上扩展。
++ **栈内存** 用来保存定义在函数内的非静态(static)对象，向下扩展。
++ **静态内存** 用来保存已经初始化局部static对象以及定义在任何函数之外的变量。
++ 未初始化数据区(BSS)：用来存放程序中未初始化的全局变量和静态变量。
++ **代码区** 又称只读区，用来存放程序执行代码和只读的全局常量变量(const局部变量在栈中)。
++ 
 
  
 ## 内存对齐
 
-### 不同类型变量所占内存
- |s |s |
- |------ |------ |
+### 不同类型变量所占内存(以64bit编译器举例)
+#### 内置类型变量
+ |type   | length(Byte)|
+ |------ |------       |
+ |char   | 1           |
+ |short  | 2           |
+ |int    | 4           |
+ |unsigned|4           |  
+ |long   | 4           |
+ |unsigned long|4      |
+ |long long|8          |
+ |float   |4           |
+ |double  |8           |
+
+#### 指针变量
++ 指针变量所占字节由编译器的寻址空间决定，64位编译器指针变量宽度为8字节。
 ### 内存对齐的原因
 + 平台原因 某些硬件平台不支持访问任意地址上的任意地址，只能在特定地址取特定类型的数据，否则可能会抛出硬件异常。
 
@@ -27,3 +42,25 @@
 + **子结构体变量**的对齐值为其中最宽元素的对齐值(空结构体和空类C++中占1字节)。
 
 ### 编译器有默认对齐值，结构体的实际对齐值会取结构体对齐值和编译器默认对齐值中较小的那个
+```
+\\以下结构体实例
+
+struct a{
+char a;
+short b;
+char c;
+int d;
+char e;
+}
+\\这里我们算一下结构体所占内存为1+1(补齐)+2+1+3(补齐)+4+1+3(补齐)=16个字节;
+\\如果将结构体中元素的顺序修改为
+struct a{
+ int c;
+ short b;
+ char a;
+ char c;
+ char e;
+}
+\\所占内存为4+2+1+1+1+3(补齐)=12个字节
+\\note:设计结构体或类中变量时可以优先将占内存大的元素放在前面，相对来说节约内存。
+```
